--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>clound-parking</name>
 	<description>Clound Parking</description>
-	<properties>
+	
+  <properties>
 		<java.version>11</java.version>
     <modelmapper.version>2.3.5</modelmapper.version>
-	</properties>
+    <springfox-swagger.version>2.9.2</springfox-swagger.version>
+  </properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -28,6 +31,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>${springfox-swagger.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>${springfox-swagger.version}</version>
+     </dependency>
 
     	<dependency>
 			<groupId>org.modelmapper</groupId>
