--- a/pom.xml
+++ b/pom.xml
@@ -58,13 +58,23 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
-    
+
     <!-- Libary de test-->
     <dependency>
         <groupId>io.rest-assured</groupId>
         <artifactId>rest-assured</artifactId>
         <scope>test</scope>
     </dependency>
+
+    <!-- Postgres and SpringData JPA -->
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
 
 	</dependencies>
   
