--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,14 @@ server.error.include-stacktrace=never
 server.error.include-message=always
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=admin
 spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# spring.security.user.name=user
+# spring.security.user.password=test123456
+# spring.security.user.roles="USER"
+
